--- a/API.html
+++ b/API.html
@@ -158,7 +158,7 @@ const airportMap = {
   "FIH":"N’djili Airport","WDH":"Hosea Kutako International Airport","UTT":"Upolu Airport",
   "SV":"Savannakhet Airport","AT":"Antananarivo Ivato Airport","KIM":"Kimberley Airport",
   "MSU":"Moshoeshoe I International Airport","SIS":"Sishen Airport","SHO":"King Shaka International Airport",
-  "BUQ":"Joshua Mqabuko Nkomo International Airport","PZB":"Pietermaritzburg Airport","VFA":"Victoria Falls Intl.","MRU":"Sir S. Ramgoolam Intl","NLA":"Simon M. Kapwepwe Intl","FBM":"Luano Intl","WVB":"Walvis Bay Airport",
+  "BUQ":"Joshua Mqabuko Nkomo International Airport","PZB":"Pietermaritzburg Airport","VFA":"Victoria Falls Intl.","MRU":"Sir S. Ramgoolam Intl","NLA":"Simon M. Kapwepwe Intl","FBM":"Luano Intl","WVB":"Walvis Bay Airport"
 };
 
 // --- Airlines Map ---
@@ -295,6 +295,7 @@ setInterval(fetchDepartures,600000);
 
 </body>
 </html>
+
 
 
 
