--- a/API.html
+++ b/API.html
@@ -157,8 +157,8 @@ const airportMap = {
   "ZRH":"Zurich Airport","RUN":"Roland Garros Airport","NBO":"Jomo Kenyatta International Airport",
   "FIH":"N’djili Airport","WDH":"Hosea Kutako International Airport","UTT":"Upolu Airport",
   "SV":"Savannakhet Airport","AT":"Antananarivo Ivato Airport","KIM":"Kimberley Airport",
-  "MSU":"Moshoeshoe I International Airport","SIS":"Sishen Airport","SHO":"King Shaka International Airport",
-  "BUQ":"Joshua Mqabuko Nkomo International Airport","PZB":"Pietermaritzburg Airport","VFA":"Victoria Falls Intl.","MRU":"Sir S. Ramgoolam Intl","NLA":"Simon M. Kapwepwe Intl","FBM":"Luano Intl","WVB":"Walvis Bay Airport"
+  "MSU":"Moshoeshoe I International Airport","SIS":"Sishen Airport","SHO":"King Shaka International Airport","TET":"Chingozi","AUH":"Zayed Intl.","TNR":"Ivato Intl","SZK":"Skukuza Airport",
+  "BUQ":"Joshua Mqabuko Nkomo International Airport","PZB":"Pietermaritzburg Airport","VFA":"Victoria Falls Intl.","MRU":"Sir S. Ramgoolam Intl","NLA":"Simon M. Kapwepwe Intl","FBM":"Luano Intl","WVB":"Walvis Bay Airport","MGH":"Margate Airport"
 };
 
 // --- Airlines Map ---
@@ -295,6 +295,7 @@ setInterval(fetchDepartures,600000);
 
 </body>
 </html>
+
 
 
 
