--- a/API.html
+++ b/API.html
@@ -157,8 +157,11 @@ const airportMap = {
   "ZRH":"Zurich Airport","RUN":"Roland Garros Airport","NBO":"Jomo Kenyatta International Airport",
   "FIH":"N’djili Airport","WDH":"Hosea Kutako International Airport","UTT":"Upolu Airport",
   "SV":"Savannakhet Airport","AT":"Antananarivo Ivato Airport","KIM":"Kimberley Airport",
-  "MSU":"Moshoeshoe I International Airport","SIS":"Sishen Airport","SHO":"King Shaka International Airport","TET":"Chingozi","AUH":"Zayed Intl.","TNR":"Ivato Intl","SZK":"Skukuza Airport",
-  "BUQ":"Joshua Mqabuko Nkomo International Airport","PZB":"Pietermaritzburg Airport","VFA":"Victoria Falls Intl.","MRU":"Sir S. Ramgoolam Intl","NLA":"Simon M. Kapwepwe Intl","FBM":"Luano Intl","WVB":"Walvis Bay Airport","MGH":"Margate Airport"
+  "MSU":"Moshoeshoe I International Airport","SIS":"Sishen Airport","SHO":"King Shaka International Airport",
+  "TET":"Chingozi","AUH":"Zayed Intl.","TNR":"Ivato Intl","SZK":"Skukuza Airport",
+  "BUQ":"Joshua Mqabuko Nkomo International Airport","PZB":"Pietermaritzburg Airport",
+  "VFA":"Victoria Falls Intl.","MRU":"Sir S. Ramgoolam Intl","NLA":"Simon M. Kapwepwe Intl",
+  "FBM":"Luano Intl","WVB":"Walvis Bay Airport","MGH":"Margate Airport"
 };
 
 // --- Airlines Map ---
@@ -180,7 +183,10 @@ const airlineMap = {
 };
 
 // --- South African Airports ---
-const saAirports = ["JNB","CPT","DUR","MQP","UTN","PLZ","BFN","GRJ","ELS","PTG","RCB","KIM","SIS","PZB","SHO"];
+const saAirports = [
+  "JNB", "CPT", "DUR", "MQP", "UTN", "PLZ", "BFN", "GRJ", "ELS", "PTG",
+  "RCB", "KIM", "SIS", "PZB", "SHO", "MGH", "SZK"
+];
 
 // --- Weather ---
 const lat=-26.1337, lon=28.2420;
@@ -295,6 +301,7 @@ setInterval(fetchDepartures,600000);
 
 </body>
 </html>
+
 
 
 
