--- a/API.html
+++ b/API.html
@@ -161,7 +161,7 @@ const airportMap = {
   "TET":"Chingozi","AUH":"Zayed Intl.","TNR":"Ivato Intl","SZK":"Skukuza Airport",
   "BUQ":"Joshua Mqabuko Nkomo International Airport","PZB":"Pietermaritzburg Airport",
   "VFA":"Victoria Falls Intl.","MRU":"Sir S. Ramgoolam Intl","NLA":"Simon M. Kapwepwe Intl",
-  "FBM":"Luano Intl","WVB":"Walvis Bay Airport","MGH":"Margate Airport"
+  "FBM":"Luano Intl","WVB":"Walvis Bay Airport","MGH":"Margate Airport","SZX":"Bao'an Intl","HDS":"Hoedspruit"
 };
 
 // --- Airlines Map ---
@@ -185,7 +185,7 @@ const airlineMap = {
 // --- South African Airports ---
 const saAirports = [
   "JNB", "CPT", "DUR", "MQP", "UTN", "PLZ", "BFN", "GRJ", "ELS", "PTG",
-  "RCB", "KIM", "SIS", "PZB", "SHO", "MGH", "SZK"
+  "RCB", "KIM", "SIS", "SHO", "PZB", "MGH", "HDS", "SZK"
 ];
 
 // --- Weather ---
@@ -301,6 +301,7 @@ setInterval(fetchDepartures,600000);
 
 </body>
 </html>
+
 
 
 
