--- a/API.html
+++ b/API.html
@@ -7,14 +7,17 @@
 <style>
 /* --- Scale entire page for Hisense TV --- */
 body {
-    transform: scale(0.9);        /* Shrinks page to 90% for TV fit */
-    transform-origin: top left;   /* Anchor scaling from top-left */
-    width: 111.1%;                /* 100 / 0.9 to maintain full width */
-    height: 111.1%;               /* Optional: match width scaling */
+    transform: scale(0.9);
+    transform-origin: top left;
+    width: 111.1%;
+    height: 111.1%;
+    background:#111;
+    color:#eee;
+    font-family:Arial, sans-serif;
+    margin:0;
 }
 
-/* --- Existing styles --- */
-body { background:#111; color:#eee; font-family:Arial, sans-serif; margin:0; }
+/* --- Header --- */
 .header {
     display:flex;
     justify-content:space-between;
@@ -38,7 +41,6 @@ body { background:#111; color:#eee; font-family:Arial, sans-serif; margin:0; }
     top:15px;
     height:70px;
     width:auto;
-    display:block;
 }
 .header-left h1 {
     margin:0;
@@ -46,58 +48,40 @@ body { background:#111; color:#eee; font-family:Arial, sans-serif; margin:0; }
     text-align:center;
 }
 #liveWeather { font-size:1.2em; font-weight:bold; padding:5px 10px; background:rgba(30,30,30,0.8); border-radius:5px; }
-.table-wrapper { height:calc(100vh - 100px); display:flex; flex-direction:column; }
+
+/* --- Table --- */
+.table-wrapper { height:calc(100vh - 100px); display:flex; flex-direction:column; overflow:hidden; }
 table { width:100%; border-collapse:collapse; font-size:18px; table-layout:fixed; }
 thead { background:#000; position:sticky; top:0; z-index:2; }
 thead th { padding:12px 8px; text-align:left; border-bottom:2px solid #2b2b2b; }
 tbody td { padding:12px 8px; border-bottom:1px solid #2b2b2b; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
 tbody tr:nth-child(even){ background:#141414; }
 
-/* Column Width Control for TV */
-th:first-child, td:first-child { 
-    width: 100px;
-    max-width: 120px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-th.airline, td.airline { 
-    width: 210px;
-    max-width: 210px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-th.destination, td.destination { 
-    width: 400px;
-    max-width: 400px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
+/* Column Width Control */
+th.flight, td.flight { width: 100px; }
+th.airline, td.airline { width: 220px; }
+th.destination, td.destination { width: 400px; }
+th.dep, td.dep { width: 180px; }
 
-/* Flight Status visibility */
+/* Flight Status */
 .status-scheduled { color:#00bfff; font-weight:bold; }
 .status-departed  { color:#32cd32; font-weight:bold; }
 .status-enroute   { color:#ffa500; font-weight:bold; }
 .status-arrived   { color:#32cd32; font-weight:bold; }
 .status-delayed   { color:#ffa500; font-weight:bold; animation: blink 1s step-start infinite; }
 .status-cancelled { color:#ff0000; font-weight:bold; animation: blink 0.8s step-start infinite; }
-
 @keyframes blink { 0%,50%,100% {opacity:1;} 25%,75% {opacity:0;} }
+
 #scroll-body { flex:1; overflow:hidden; position:relative; }
-#scroll-inner { display:inline-block; }
+#scroll-inner { display:inline-block; will-change:transform; }
 
-@keyframes scroll { 0% { transform:translateY(0); } 100% { transform:translateY(-50%); } }
-
-@media (max-width: 1024px) {
-    .header-left { flex-direction: column; gap:10px; height:auto; }
-    .header-left h1 { font-size:2em; text-align:center; }
+@media (max-width:1024px){
+    .header-left h1 { font-size:2em; }
     table { font-size:16px; }
-    th.airline, td.airline { max-width:150px; }
-    th.destination, td.destination { max-width:180px; }
+    th.airline, td.airline { max-width:180px; }
+    th.destination, td.destination { max-width:250px; }
 }
-@media (max-width: 600px) {
+@media (max-width:600px){
     .header-left h1 { font-size:1.5em; }
     table { font-size:14px; }
     th, td { padding:6px 4px; }
@@ -118,14 +102,13 @@ th.destination, td.destination {
   <table>
     <thead>
       <tr>
-        <th>Flight</th>
+        <th class="flight">Flight</th>
         <th class="airline">Airline</th>
         <th class="destination">Destination</th>
-        <th>Departure Date</th>
-        <th>Departure Time</th>
-        <th>Arrival Time</th>
-        <th>Est. Flight Time</th>
-        <th>Flight Status</th>
+        <th class="dep">Dep Date & Time</th>
+        <th>Arrival</th>
+        <th>Est. Flight</th>
+        <th>Status</th>
       </tr>
     </thead>
   </table>
@@ -221,34 +204,21 @@ const API_KEY="24326bb2-4313-4dad-85f4-6ae08ad06866";
 const departuresBody=document.getElementById("departures-body");
 const departuresClone=document.getElementById("departures-clone");
 const scrollInner=document.getElementById("scroll-inner");
+const saAirports = ["JNB","CPT","DUR","MQP","UTN","PLZ","BFN","GRJ","ELS","PTG","RCB","KIM","SIS","SHO","PZB","MGH","HDS","SZK"];
 
 function formatDuration(min){ if(min==null||isNaN(min)) return "—"; const h=Math.floor(min/60); const m=Math.floor(min%60); return h>0?`${h}h ${m}m`:`${m}m`; }
 
-function getStatusClass(flight){
-    const now = new Date();
-    const rawStatus = (flight.status || "").toLowerCase();
-    const isCancelled = ["cancelled","canceled","cnx","c"].includes(rawStatus)
-                        || flight.cancelled === true
-                        || (flight.is_cancelled === true)
-                        || (flight.flight_status && flight.flight_status.toLowerCase() === "cancelled")
-                        || (flight.status_iata && flight.status_iata.toUpperCase() === "C");
-    if(isCancelled) return "cancelled";
-
-    if(["delayed","d","delay"].includes(rawStatus)
-       || (flight.flight_status && flight.flight_status.toLowerCase() === "delayed")
-       || (flight.status_iata && flight.status_iata.toUpperCase() === "D")) {
-        return "delayed";
-    }
-
-    const depTimeUTC = flight.dep_time ? new Date(flight.dep_time) : null;
-    const arrTimeUTC = flight.arr_time ? new Date(flight.arr_time) : null;
-
-    if(arrTimeUTC && arrTimeUTC <= now) return "arrived";
-    if(depTimeUTC && depTimeUTC <= now){
-        const minutesSinceDeparture = (now - depTimeUTC)/60000;
-        if(minutesSinceDeparture <= 30) return "departed";
-        return "enroute";
-    }
+function getStatusClass(f){
+    const now=new Date();
+    const raw=(f.status||"").toLowerCase();
+    const cancelled=["cancelled","canceled","cnx","c"].includes(raw) || f.cancelled || f.is_cancelled || (f.flight_status&&f.flight_status.toLowerCase()==="cancelled") || (f.status_iata && f.status_iata==="C");
+    if(cancelled) return "cancelled";
+    const delayed=["delayed","d","delay"].includes(raw) || (f.flight_status&&f.flight_status.toLowerCase()==="delayed") || (f.status_iata==="D");
+    if(delayed) return "delayed";
+    const depTime=f.dep_time?new Date(f.dep_time):null;
+    const arrTime=f.arr_time?new Date(f.arr_time):null;
+    if(arrTime && arrTime<=now) return "arrived";
+    if(depTime && depTime<=now){ const mins=(now-depTime)/60000; return mins<=30?"departed":"enroute"; }
     return "scheduled";
 }
 
@@ -256,55 +226,53 @@ async function fetchDepartures(){
     try{
         const resp = await fetch(`https://airlabs.co/api/v9/schedules?dep_iata=JNB&api_key=${API_KEY}&limit=200`);
         const data = await resp.json();
-        let flights = (data.response||[]).filter(f=>f.arr_iata);
-
-        flights = flights.filter(f => !saAirports.includes(f.arr_iata));
+        let flights = (data.response||[]).filter(f=>f.arr_iata&&!saAirports.includes(f.arr_iata));
         flights.sort((a,b)=>new Date(a.dep_time)-new Date(b.dep_time));
-
         departuresBody.innerHTML="";
-        flights.forEach(f=>{
-            const statusClass = getStatusClass(f);
-            const displayStatus = {"scheduled":"Scheduled","departed":"Departed","enroute":"En Route","arrived":"Arrived","cancelled":"Cancelled","delayed":"Delayed"}[statusClass]||"Scheduled";
-
-            const depTimeUTC = f.dep_time ? new Date(f.dep_time) : null;
-            const arrTimeUTC = f.arr_time ? new Date(f.arr_time) : null;
-
-            const depDate = depTimeUTC ? depTimeUTC.toLocaleDateString('en-GB', { weekday:'short', day:'2-digit', month:'short', timeZone:'Africa/Johannesburg' }) : "—";
-            const depLocal = depTimeUTC ? depTimeUTC.toLocaleTimeString('en-GB',{hour:'2-digit',minute:'2-digit',hour12:false,timeZone:'Africa/Johannesburg'}) : "—";
-            const arrLocal = arrTimeUTC ? arrTimeUTC.toLocaleTimeString('en-GB',{hour:'2-digit',minute:'2-digit',hour12:false,timeZone:'Africa/Johannesburg'}) : "—";
-            const estMins = depTimeUTC && arrTimeUTC ? (arrTimeUTC-depTimeUTC)/60000 : null;
-
-            const airlineName = airlineMap[f.airline_iata] || f.airline_iata || "";
-            const destName = airportMap[f.arr_iata] || f.arr_iata;
-
-            const row = document.createElement("tr");
-            row.innerHTML = `
-                <td>${f.flight_iata||""}</td>
-                <td class="airline" title="${airlineName}">${airlineName}</td>
-                <td class="destination" title="${destName}">${destName}</td>
-                <td>${depDate}</td>
-                <td>${depLocal}</td>
-                <td>${arrLocal}</td>
-                <td>${formatDuration(estMins)}</td>
-                <td class="status-${statusClass}">${displayStatus}</td>
-            `;
+        if(flights.length===0){
+            const row=document.createElement("tr");
+            row.innerHTML=`<td colspan="7" style="text-align:center">No flights available</td>`;
             departuresBody.appendChild(row);
-        });
-
-        if(!scrollInner.dataset.scrolling) setupScroll();
-
+        } else {
+            flights.forEach(f=>{
+                const statusClass=getStatusClass(f);
+                const depTime=f.dep_time?new Date(f.dep_time):null;
+                const arrTime=f.arr_time?new Date(f.arr_time):null;
+                const depLocal=depTime?depTime.toLocaleString('en-GB',{weekday:'short',day:'2-digit',month:'short',hour:'2-digit',minute:'2-digit',hour12:false,timeZone:'Africa/Johannesburg'}):"—";
+                const arrLocal=arrTime?arrTime.toLocaleTimeString('en-GB',{hour:'2-digit',minute:'2-digit',hour12:false,timeZone:'Africa/Johannesburg'}):"—";
+                const est=formatDuration(depTime&&arrTime?(arrTime-depTime)/60000:null);
+                const airlineName=airlineMap[f.airline_iata]||f.airline_iata||"";
+                const destName=airportMap[f.arr_iata]||f.arr_iata;
+                const row=document.createElement("tr");
+                row.innerHTML=`
+                    <td class="flight">${f.flight_iata||""}</td>
+                    <td class="airline" title="${airlineName}">${airlineName}</td>
+                    <td class="destination" title="${destName}">${destName}</td>
+                    <td class="dep">${depLocal}</td>
+                    <td>${arrLocal}</td>
+                    <td>${est}</td>
+                    <td class="status-${statusClass}">${statusClass.charAt(0).toUpperCase()+statusClass.slice(1)}</td>
+                `;
+                departuresBody.appendChild(row);
+            });
+        }
+        setupScroll();
     } catch(err){ console.error(err); }
 }
 
 function setupScroll(){
-    if(departuresBody.children.length === 0) return;
+    if(departuresBody.children.length===0) return;
     departuresClone.innerHTML = departuresBody.innerHTML;
-    const scrollHeight = scrollInner.scrollHeight/2;
-    const speed = 25; // slower scroll for TV readability
-    const duration = scrollHeight / speed;
+    let scrollHeight = scrollInner.scrollHeight/2;
+    let speed = 25;
+    let duration = scrollHeight/speed;
     scrollInner.style.animation = `scroll ${duration}s linear infinite`;
-    scrollInner.dataset.scrolling = "true";
+    scrollInner.style.animationName = "scroll";
 }
+
+const styleSheet = document.createElement("style");
+styleSheet.innerHTML = `@keyframes scroll { 0% { transform:translateY(0); } 100% { transform:translateY(-50%); } }`;
+document.head.appendChild(styleSheet);
 
 fetchDepartures();
 setInterval(fetchDepartures,600000);
@@ -312,14 +280,6 @@ setInterval(fetchDepartures,600000);
 
 </body>
 </html>
-
-
-
-
-
-
-
-
 
 
 
