--- a/API.html
+++ b/API.html
@@ -224,47 +224,39 @@ async function fetchDepartures(){
     try{
         const resp = await fetch(`https://airlabs.co/api/v9/schedules?dep_iata=JNB&api_key=${API_KEY}&limit=200`);
         const data = await resp.json();
-        let flights = (data.response||[]).filter(f=>f.arr_iata&&!saAirports.includes(f.arr_iata));
+        let flights = (data.response||[]).filter(f => f.arr_iata && !saAirports.includes(f.arr_iata));
+        console.log("Flights fetched:", flights.length); // DEBUG
+
+        if(flights.length===0){
+            departuresBody.innerHTML='<tr><td colspan="7" style="text-align:center">No flights available</td></tr>';
+            departuresClone.innerHTML='';
+            return;
+        }
+
         flights.sort((a,b)=>new Date(a.dep_time)-new Date(b.dep_time));
         departuresBody.innerHTML="";
-        if(flights.length===0){
-            const row=document.createElement("tr");
-            row.innerHTML=`<td colspan="7" style="text-align:center">No flights available</td>`;
+        flights.forEach(f=>{
+            const row = document.createElement("tr");
+            row.innerHTML=`<td>${f.flight_iata||""}</td>
+                <td class="airline">${airlineMap[f.airline_iata]||f.airline_iata||""}</td>
+                <td class="destination">${airportMap[f.arr_iata]||f.arr_iata}</td>
+                <td>${f.dep_time?new Date(f.dep_time).toLocaleString('en-GB',{weekday:'short',day:'2-digit',month:'short',hour:'2-digit',minute:'2-digit',hour12:false,timeZone:'Africa/Johannesburg'}):"—"}</td>
+                <td>${f.arr_time?new Date(f.arr_time).toLocaleTimeString('en-GB',{hour:'2-digit',minute:'2-digit',hour12:false,timeZone:'Africa/Johannesburg'}):"—"}</td>
+                <td>${f.dep_time&&f.arr_time?formatDuration((new Date(f.arr_time)-new Date(f.dep_time))/60000):"—"}</td>
+                <td class="status-${getStatusClass(f)}">${getStatusClass(f)}</td>`;
             departuresBody.appendChild(row);
-        } else {
-            flights.forEach(f=>{
-                const statusClass=getStatusClass(f);
-                const depTime=f.dep_time?new Date(f.dep_time):null;
-                const arrTime=f.arr_time?new Date(f.arr_time):null;
-                const depLocal=depTime?depTime.toLocaleString('en-GB',{weekday:'short',day:'2-digit',month:'short',hour:'2-digit',minute:'2-digit',hour12:false,timeZone:'Africa/Johannesburg'}):"—";
-                const arrLocal=arrTime?arrTime.toLocaleTimeString('en-GB',{hour:'2-digit',minute:'2-digit',hour12:false,timeZone:'Africa/Johannesburg'}):"—";
-                const est=formatDuration(depTime&&arrTime?(arrTime-depTime)/60000:null);
-                const airlineName=airlineMap[f.airline_iata]||f.airline_iata||"";
-                const destName=airportMap[f.arr_iata]||f.arr_iata;
-                const row=document.createElement("tr");
-                row.innerHTML=`
-                    <td class="flight">${f.flight_iata||""}</td>
-                    <td class="airline" title="${airlineName}">${airlineName}</td>
-                    <td class="destination" title="${destName}">${destName}</td>
-                    <td class="dep">${depLocal}</td>
-                    <td>${arrLocal}</td>
-                    <td>${est}</td>
-                    <td class="status-${statusClass}">${statusClass.charAt(0).toUpperCase()+statusClass.slice(1)}</td>
-                `;
-                departuresBody.appendChild(row);
-            });
-        }
-        setupScroll();
-    } catch(err){ console.error(err); }
-}
+        });
 
-function setupScroll(){
-    if(departuresBody.children.length===0) return;
-    departuresClone.innerHTML = departuresBody.innerHTML;
-    const scrollHeight = departuresBody.offsetHeight;
-    const speed = 25; // pixels per second
-    const duration = (scrollHeight*2)/speed; // full loop with clone
-    scrollInner.style.animation = `scroll ${duration}s linear infinite`;
+        // Clone table AFTER adding rows
+        departuresClone.innerHTML = departuresBody.innerHTML;
+
+        // Full height scroll
+        const totalHeight = scrollInner.scrollHeight / 2;
+        const speed = 25; 
+        const duration = totalHeight / speed;
+        scrollInner.style.animation = `scroll ${duration}s linear infinite`;
+
+    } catch(err){ console.error(err); }
 }
 
 const styleSheet = document.createElement("style");
@@ -277,4 +269,5 @@ setInterval(fetchDepartures,600000);
 
 </body>
 </html>
+
 
